--- a/recipe/Client/src/components/AddRecipe.css
+++ b/recipe/Client/src/components/AddRecipe.css
@@ -22,7 +22,7 @@
   }
   /* Button styling */
 .btn-primary {
-    background-color: #9de176; /* Green background */
+    background-color: #28a745; /* Green background */
     border: none; /* Remove default border */
     color: #ffffff; /* White text */
     padding: 10px 20px; /* Add padding for better button size */
