--- a/recipe/Client/src/index.css
+++ b/recipe/Client/src/index.css
@@ -21,3 +21,24 @@ body.dark-mode {
 .nav.dark-mode {
   background-color: #444;
 }
+/* Default light theme styles */
+.btn {
+  color: white;
+  border: 1px solid #28a745;
+  background-color: #28a745;
+  border-radius: 5px;
+  padding: 10px 20px;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+/* Dark theme styles */
+.dark-mode .btn {
+  color: white;
+  border: 1px solid #28a745;
+  background-color: #28a745;
+  border-radius: 5px;
+  padding: 10px 20px;
+  font-size: 16px;
+  font-weight: bold;
+}
